--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,40 @@
+/* Font Faces */
 @font-face {
-  font-family: NotoSansLao;
-  src: url('/vendors/Noto_Sans_Lao/NotoSansLao-VariableFont_wdth,wght.ttf');
+  font-family: 'NotoSansLaoLooped';
+  src: url('./assets/fonts/NotoSansLaoLooped/NotoSansLaoLooped-Regular.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: 'NotoSansLaoLooped';
+  src: url('./assets/fonts/NotoSansLaoLooped/NotoSansLaoLooped-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NotoSansLaoLooped';
+  src: url('./assets/fonts/NotoSansLaoLooped/NotoSansLaoLooped-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+/* Global Styles */
 body {
   margin: 0;
   padding: 0 !important;
-  font-family: NotoSansLao, sans-serif !important;
+  font-family: 'NotoSansLaoLooped', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 body * {
-  font-family: NotoSansLao, sans-serif !important;
+  font-family: 'NotoSansLaoLooped', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace !important;
+  font-family: 'source-code-pro', Menlo, Monaco, Consolas, 'Courier New', monospace !important;
 }
